--- a/luna_pinyin_fluency.custom.yaml
+++ b/luna_pinyin_fluency.custom.yaml
@@ -28,6 +28,7 @@
 patch:
   # 載入朙月拼音擴充詞庫
   "translator/dictionary": luna_pinyin.extended
+  
   # 加載 easy_en 依賴
   "schema/dependencies/@next": easy_en
   # 載入翻譯英文的碼表翻譯器，取名爲 english
@@ -39,3 +40,24 @@ patch:
     enable_completion: true
     enable_sentence: false
     initial_quality: -1
+	
+  # 改寫拼寫運算，使得含西文的詞彙（位於 luna_pinyin.cn_en.dict.yaml 中）不影響簡拼功能（注意，此功能只適用於朙月拼音系列方案，不適用於各類雙拼方案）
+  # 本條補靪只在「小狼毫 0.9.30」、「鼠鬚管 0.9.25 」、「Rime-1.2」及更高的版本中起作用。
+  "speller/algebra/@before 0": xform/^([b-df-np-z])$/$1_/
+  'speller/algebra':
+  - erase/^xx$/
+  - "abbrev/^([a-z]).+$/$1/"         # 请注意一定要包含此句，否则无法实现诸如输入ww输出问问的功能。
+  - derive/^([zcs])h/$1/             # zh, ch, sh => z, c, s
+  - derive/^([zcs])([^h])/$1h$2/     # z, c, s => zh, ch, sh
+  - derive/^n/l/                     # n => l
+  - derive/^l/n/                     # l => n
+  - derive/([ei])n$/$1ng/            # en => eng, in => ing
+  - derive/([ei])ng$/$1n/            # eng => en, ing => in
+  - derive/^([nl])ve$/$1ue/          # nve = nue, lve = lue
+  - derive/([aeiou])ng$/$1gn/        # dagn => dang 
+  - derive/ong$/on/                  # zhonguo => zhong guo
+  - derive/ao$/oa/                   # hoa => hao
+  - derive/([iu])a(o|ng?)$/a$1$2/    # tain => tian
+  
+  "punctuator/import_preset": symbols
+  "recognizer/patterns/punct": "^/([a-z]+|[0-9])$"
